tests/unittests/broken_functions/syntax_error/main.py
# Copyright (c) Microsoft Corporation. All rights reserved.
# Licensed under the MIT License.


def main(req):
    1 /  # noqa
